--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,21 @@
   <body>
     <a href="../">Home</a>
     <h1>Lasagna Recipe</h1>
+    <img src="../images/lasagna.jpg" alt="lasagna" />
+    <p>Description of lasagna.</p>
+    <ul>
+      <li>Ingredient Meat</li>
+      <li>Ingredient Pasta</li>
+      <li>Ingredient Tomato</li>
+      <li>Ingredient Cheese</li>
+      <li>Ingredient Basil</li>
+    </ul>
+    <ol>
+      <li>Step 1</li>
+      <li>Step 2</li>
+      <li>Step 3</li>
+      <li>Step 4</li>
+      <li>Step 5</li>
+    </ol>
   </body>
 </html>
