add more recipes add list to index

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Lasagna</title>
+    <title>Butter Chicken</title>
   </head>
   <body>
     <a href="../">Home</a>
-    <h1>Lasagna Recipe</h1>
-    <img src="../images/lasagna.jpg" alt="lasagna" />
-    <p>Description of lasagna.</p>
+    <h1>Butter Chicken Recipe</h1>
+    <img src="../images/butter-chicken.webp" alt="butter chicken" />
+    <p>Description of Butter Chicken.</p>
     <ul>
-      <li>Ingredient Meat</li>
-      <li>Ingredient Pasta</li>
+      <li>Ingredient Chicken</li>
+      <li>Ingredient Spices</li>
       <li>Ingredient Tomato</li>
-      <li>Ingredient Cheese</li>
-      <li>Ingredient Basil</li>
+      <li>Ingredient Herbs</li>
     </ul>
     <ol>
       <li>Step 1</li>
