--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+      <li><a href="recipes/apple-pie.html">Apple Pie Recipe</a></li>
+      <li><a href="recipes/butter-chicken.html">Butter Chicken Recipe</a></li>
+      <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+    </ul>
   </body>
 </html>
